--- a/style.css
+++ b/style.css
@@ -449,17 +449,20 @@ footer .contact-us i {
 }
 
 .special-checkout {
-    background-color: #4CAF50; 
-    padding: 10px 20px;
+    background-color: greenyellow; 
+    color: white;
+    padding: 15px 20px; 
     margin-top: 20px;
+    margin-bottom: 20px; 
     font-family: 'Patrick Hand', cursive;
-    font-size: 18px;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    font-size: 1.2em; 
+    border: none; 
+    border-radius: 10px; 
+    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3); 
+    transition: transform 0.2s, background-color 0.3s; 
     cursor: pointer;
-    width: 100%; 
-    transition: background-color 0.3s, transform 0.2s;
+    display: block;
+    margin: 20px auto; 
 }
 
 .special-checkout:hover {
